# renovate-test

./: .bazelignore  .bazelrc  MODULE.bazel  WORKSPACE  package.json  pnpm-lock.yaml
.github/: renovate.json
